<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".activities.DiagnosisActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_md"
        android:background="@color/background_primary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/icon_size_lg"
            android:layout_height="@dimen/icon_size_lg"
            android:src="@drawable/ic_arrow_forward"
            android:background="@drawable/button_airbnb_ghost"
            android:padding="@dimen/padding_sm"
            android:rotation="180"
            android:contentDescription="@string/btn_back"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_diagnosis_activity"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_display_bold"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginEnd="@dimen/spacing_md"
            android:gravity="center" />

        <View
            android:layout_width="@dimen/icon_size_lg"
            android:layout_height="@dimen/icon_size_lg" />

    </LinearLayout>

    <!-- Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_md">

            <!-- Instructions -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_lg"
                app:cardCornerRadius="@dimen/corner_radius_lg"
                app:cardElevation="@dimen/elevation_md"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_md">

                    <TextView
                        android:id="@+id/text_instructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instruction_camera"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/text_size_xl"
                        android:textStyle="bold"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:layout_marginBottom="@dimen/spacing_md" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instruction_1"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/text_size_lg"
                        android:fontFamily="@font/sf_pro_text_regular"
                        android:lineSpacingExtra="4dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Image Preview -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_lg"
                app:cardCornerRadius="@dimen/corner_radius_lg"
                app:cardElevation="@dimen/elevation_md"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_md">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Onyesho la Picha"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/text_size_xl"
                        android:textStyle="bold"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:layout_marginBottom="@dimen/spacing_md" />

                    <ImageView
                        android:id="@+id/image_preview"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/background_secondary"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_cow"
                        android:contentDescription="Image preview" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Action Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/spacing_lg">

                <Button
                    android:id="@+id/btn_take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_md"
                    android:text="@string/btn_take_photo"
                    android:textSize="@dimen/text_size_lg"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:drawableStart="@drawable/ic_camera_diagnose"
                    android:drawablePadding="@dimen/spacing_md"
                    style="@style/ButtonPrimary" />

                <Button
                    android:id="@+id/btn_select_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_select_gallery"
                    android:textSize="@dimen/text_size_lg"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:drawableStart="@drawable/ic_history"
                    android:drawablePadding="@dimen/spacing_md"
                    style="@style/ButtonSecondary" />

            </LinearLayout>

            <!-- Tips -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/corner_radius_lg"
                app:cardElevation="@dimen/elevation_md"
                app:cardBackgroundColor="@color/info_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_md">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tips_title"
                        android:textColor="@color/info_text"
                        android:textSize="@dimen/text_size_lg"
                        android:textStyle="bold"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:layout_marginBottom="@dimen/spacing_sm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tip_1"
                        android:textColor="@color/info_text"
                        android:textSize="@dimen/text_size_md"
                        android:fontFamily="@font/sf_pro_text_regular"
                        android:lineSpacingExtra="2dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
